[tool.poetry]
name = "pmweb_challenge"
version = "0.1.0"
description = ""
authors = ["Jean Landim <jewanbb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
loguru = "^0.5.3"
pytest = "^6.2.5"
pytest-watch = "^4.2.0"
Unidecode = "^1.3.2"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
